sorting,popup,windowsbuttons aded

--- a/tableViewtest/qml.qrc
+++ b/tableViewtest/qml.qrc
@@ -5,11 +5,18 @@
         <file>MenuButton.qml</file>
         <file>MessageSelectPage.qml</file>
         <file>DesignTestPAth.qml</file>
+        <file>PopupWindow.qml</file>
+        <file>ButtonBar.qml</file>
     </qresource>
     <qresource prefix="/img">
         <file>img/iconSearchFile.png</file>
         <file>img/arrowLeft.png</file>
         <file>img/arrowRight.png</file>
         <file>img/imgLogo.png</file>
+        <file>img/600600.png</file>
+        <file>img/iconEscapeButton.png</file>
+        <file>img/iconFullscreenButton.png</file>
+        <file>img/iconIconSizeButton.png</file>
+        <file>img/headerIcon.png</file>
     </qresource>
 </RCC>
